public/css/app.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
}

@font-face {
    font-family: 'Montserrat';
    src: url('../fonts/Montserrat/Montserrat-VariableFont_wght.ttf') format('truetype');
}

@font-face {
    font-family: 'Itim';
    src: url('../fonts/Itim/Itim-Regular.ttf') format('truetype');
}

/* LAYOUT */
.container {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

header {
    background-image: url('../images/header-background.png');
    background-size: auto;
    background-position: center;
    background-color: white;
    display: flex;
    flex-direction: column;
    padding: 15px;
}

.logo {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

p.title {
    color: white;
    font-size: 35px;
    font-family: 'Itim';
    font-weight: 500;
}

img.logo {
    height: 150px;
    width: auto;
}

.btn {
    display: flex;
    justify-content: flex-end;
}

div#reroute {
    padding: 10px 20px;
    border-radius: 5px;
    border: 3px solid white;
    background-color: transparent;
    color: white;
}

div#reroute a {
    text-decoration: none;
    color: white;
}

main {
    display: flex;
    flex-direction: column;
    background-color: rgb(247, 247, 247);
    flex: auto;
}

footer {
    background-color: rgb(156, 156, 156);
    background-image: url('../images/header-background.png');
    background-size: auto;
    background-position: bottom 200px center;
    display: flex;
    justify-content: center;
    padding: 30px;
    color: white;
}

.flash {
    position: fixed;
    background-color: rgb(247, 247, 247);
    padding: 10px 30px;
    border-radius: 5px;
    box-shadow: 4px 5px 5px rgb(199, 199, 199);
    border: 1px solid black;
}

/* INDEX */
.index-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 30px 60px;
}

.display {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    gap: 30px;
    padding: 30px;
}

form#search {
    width: 100%;
}

input.search {
    width: 100%;
}

.search-row {
    display: flex;
    gap: 8px;
}

button.search {
    padding: 10px 20px;
    border-radius: 8px;
    border: none;
    background-color: rgb(65, 45, 3);
    color: white;
}

.card {
    height: 250px;
    display: flex;
    flex-direction: column;
    border-radius: 8px;
    background-color: rgb(255, 255, 255);
    align-items: center;
    padding: 15px;
    gap: 10px;
    box-shadow: 4px 5px 5px rgb(199, 199, 199);
}

img.profile {
    width: 160px;
    height: 160px;
    border-radius: 50%;
}

p {
    text-align: center;
}

.btn-row {
    display: flex;
    width: 100%;
    justify-content: flex-end;
    gap: 8px;
}

.btn-row div,
button.delete {
    height: 25px;
    width: 25px;
    border-radius: 3px;
    border-style: none;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 2px;
}

button.delete {
    padding: 3px;
    height: 29px;
    width: 29px;
}

.update a {
    display: block;
    height: 90%;
    width: 90%;
    display: flex;
    justify-content: center;
    align-items: center;
}

img.btn {
    height: 100%;
    width: auto;
}

button.delete {
    background-color: rgb(207, 93, 93);
}

div.update {
    background-color: rgb(136, 136, 219);
}

.noentry-wrapper {
    display: flex;
    flex: 1;
    align-items: center;
    justify-content: center;
    padding: 15px;
}

/* SHOW */
.show-container {
    display: flex;
    flex-direction: column;
    padding: 30px 60px 60px 60px;
    align-items: center;
    gap: 50px;
}

.show-display {
    display: flex;
    gap: 30px;
    align-items: center;
}

img.show-profile {
    width: 190px;
    height: 252px;
    border-radius: 5px;
    box-shadow: 4px 5px 5px rgb(199, 199, 199);
}

.img-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 10px;
}

input[type="file"] {
    width: 60%;
    background: white;
}

.show-modal {
    width: 40vw;
    background-color: white;
    box-shadow: 4px 5px 5px rgb(199, 199, 199);
    border-radius: 13px;
    padding: 30px;
}

form {
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.row {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

input {
    appearance: none;
    border: 1px solid black;
    padding: 8px;
    width: 70%;
    border-radius: 5px;
}

input:focus {
    box-shadow: 0 0 2pt 2pt #9fadfc;
}

.prev-next {
    display: flex;
    width: 100%;
    justify-content: space-between;

}

div.prev,
div.next {
    height: 35px;
    width: 35px;
    background-color: aquamarine;
    padding: 7px;
    border-radius: 5px;
}

a.prev,
a.next {
    display: block;
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

a.prev img,
a.next img {
    height: 90%;
    width: auto;
}

button.show-update {
    background-color: rgb(136, 136, 219);
    padding: 5px 35px 5px 35px;
    border-radius: 5px;
    color: white;
    border: none;
}

p.error {
    color: red;
    font-size: small;
}

/* CREATE */
h1 {
    text-shadow: 4px 5px 5px rgb(199, 199, 199);
}
.create-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 60px;
    gap: 30px;
}

.create-modal {
    width: 25vw;
    padding: 25px;
    background-color: white;
}

#createform input {
    width: 90%;
}

.create-btn {
    padding: 15px 4.5vh;
    border: none;
    background-color: #f5af46;
    border-radius: 5px;
    color: white;
}

/* Hover on Button */
div.prev:hover,
div.next:hover,
button.show-update:hover,
button.delete:hover,
div.update:hover,
button.search:hover,
button.create-btn:hover {
    filter:brightness(0.85);
}

div#reroute:hover {
    box-shadow: 0 0 15px 7.5px #fff
}

